# folks

./: NEWS  configure.ac
backends/: Makefile.am
backends/dummy/: Makefile.am  dummy-backend-factory.vala
backends/dummy/lib/: Makefile.am  dummy-backend.vala  dummy-fat-persona.vala  dummy-namespace.vala  dummy-persona-store.vala  dummy-persona.vala  folks-dummy-uninstalled.pc.in
folks/: individual-aggregator.vala
tests/dummy/: Makefile.am  add-persona.vala  individual-retrieval.vala
tests/folks/: Makefile.am  aggregation.vala
tests/lib/: test-utils.vala
tests/lib/dummy/: Makefile.am  test-case.vala
